<resources>
    <string name="app_name">SmartHome</string>
    <string name="add_to">添加</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">登录</string>
    <string name="determine">确定</string>
    <string name="action_registered_in">注册</string>
    <string name="verification">验证码：</string>
    <string name="obtain_verification">获取验证码</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="Email">账号：</string>
    <string name="password">密码：</string>
    <string name="again_password">确认密码：</string>
</resources>
